# PROJECTMIPTTP

./: Areas.h  CMakeLists.txt  Game.h  Player.h  README.md  aotoload.sh  main.cpp
Players/: gamers.h
